fixed navbar button on mobile and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ body {
       display: block;
       --is-mobile: white;
       border: 0;
-      display: none;
+      /* display: none; */
     }
     
     .topnav.responsive {
